--- a/index.html
+++ b/index.html
@@ -1,94 +1,121 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil KUA Kecamatan Bulu Taba</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <!-- Hubungkan CSS eksternal -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>KUA Kecamatan Bulu Taba</title>
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <header>
-        <img src="logo-kemenag.png" alt="Logo Kemenag">
-        <h1>KANTOR URUSAN AGAMA KECAMATAN BULU TABA</h1>
-        <nav>
-            <a href="#tentang">Tentang</a> |
-            <a href="#visi">Visi &amp; Misi</a> |
-            <a href="#struktur">Struktur</a> |
-            <a href="#kontak">Kontak</a> |
-            <a href="#galeri">Galeri</a> |
-            <a href="#form-pelayanan">Pelayanan</a>
-        </nav>
-    </header>
+  <header>
+    <div class="nav-wrapper">
+      <a href="#" class="logo-link" aria-label="Beranda">
+        <img src="logo-kemenag.png" alt="Logo Kemenag" />
+      </a>
+
+      <button class="hamburger" id="hamburger" aria-label="Buka menu navigasi">
+        <span></span><span></span><span></span>
+      </button>
+
+      <nav id="nav">
+        <a href="#top" class="nav-link">Home</a>
+        <a href="#tentang" class="nav-link">Tentang</a>
+        <a href="#visi" class="nav-link">Visi & Misi</a>
+        <a href="#struktur" class="nav-link">Struktur</a>
+        <a href="#kontak" class="nav-link">Kontak</a>
+        <a href="#galeri" class="nav-link">Galeri</a>
+        <a href="#form-pelayanan" class="nav-link">Pelayanan</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div id="top"></div>
 
     <section id="tentang">
-        <h2>Tentang Kantor</h2>
-        <p>Kantor Urusan Agama (KUA) Kecamatan Bulu Taba adalah instansi vertikal di bawah Kementerian Agama yang berkedudukan di Desa Karave, dalam wilayah Kabupaten Pasangkayu, Sulawesi Barat. KUA ini menjalankan fungsi pelayanan urusan agama Islam seperti pernikahan, zakat, wakaf, ibadah sosial, serta pembinaan masyarakat di bidang keagamaan.</p>
-        <p>Dengan wilayah kerja yang meliputi tujuh desa, KUA Bulu Taba terus berkomitmen memberikan pelayanan yang efektif, efisien, dan harmonis dengan semangat sinergi dan moderasi beragama.</p>
+      <h2>Tentang Kantor</h2>
+      <p>Kantor Urusan Agama (KUA) Kecamatan Bulu Taba adalah instansi vertikal di bawah Kementerian Agama yang berkedudukan di Desa Karave, Kabupaten Pasangkayu, Sulawesi Barat. KUA ini melayani urusan nikah‑rujuk, zakat, wakaf, ibadah sosial, serta pembinaan masyarakat.</p>
+      <p>Dengan wilayah kerja meliputi tujuh desa, KUA Bulu Taba berkomitmen memberi pelayanan efektif, efisien, dan harmonis dalam semangat moderasi beragama.</p>
     </section>
 
     <section id="visi">
-        <h2>Visi dan Misi</h2>
-        <h3>Visi</h3>
-        <p><em>"Terwujudnya masyarakat Kecamatan Bulu Taba yang taat beragama, rukun, cerdas, sejahtera lahir dan batin dalam mewujudkan masyarakat yang mandiri dan berkepribadian yang berlandaskan gotong royong."</em></p>
-        <h3>Misi</h3>
-        <ul>
-            <li>Meningkatkan kualitas dan mutu pelayanan KUA</li>
-            <li>Meningkatkan kualitas pemahaman dan pengamalan ajaran agama</li>
-            <li>Memberikan pelayanan kehidupan beragama yang merata dan berkualitas</li>
-            <li>Meningkatkan pemanfaatan dan kualitas pengelolaan potensi ekonomi keagamaan</li>
-            <li>Meningkatkan pelayanan penyelenggara haji dan umrah yang berkualitas dan akuntabel</li>
-            <li>Meningkatkan akses dan kualitas pendidikan agama pada satuan pendidikan umum</li>
-            <li>Mewujudkan tata kelola pemerintahan yang bersih, akuntabel, dan terpercaya</li>
-        </ul>
+      <h2>Visi & Misi</h2>
+      <h3>Visi</h3>
+      <p><em>“Terwujudnya masyarakat Kecamatan Bulu Taba yang taat beragama, rukun, cerdas, sejahtera lahir batin.”</em></p>
+
+      <h3>Misi</h3>
+      <ul>
+        <li>Meningkatkan kualitas layanan KUA</li>
+        <li>Meningkatkan pemahaman & pengamalan ajaran agama</li>
+        <li>Memberikan pelayanan kehidupan beragama yang merata & berkualitas</li>
+        <li>Meningkatkan pengelolaan potensi ekonomi keagamaan</li>
+        <li>Meningkatkan pelayanan penyelenggaraan haji & umrah</li>
+        <li>Meningkatkan akses & kualitas pendidikan agama</li>
+        <li>Mewujudkan tata kelola pemerintahan yang bersih & akuntabel</li>
+      </ul>
     </section>
 
     <section id="struktur">
-        <h2>Struktur Organisasi</h2>
-        <ul>
-            <li>Muhammad Idrus, S.Ag, M. — Kepala KUA / Penghulu</li>
-            <li>Umi Hasanah, S.Pd.I — Tata Usaha</li>
-            <li>Ibnu Hajar — Administrasi</li>
-            <li>Alikhasbuna, S.Pd — Penyuluh Agama Islam</li>
-            <li>A. Nurfadilah Berlian Fahmi, S.Pd — Penyuluh Agama Islam</li>
-            <li>Muh. Nurkhalid, S.Ag — Penyuluh Agama Islam</li>
-            <li>Muh. Raenaldi, S.Sos — Penyuluh Agama Islam (CPNS)</li>
-            <li>Marsiana Gembira Beke, S.Ag — Penyuluh Agama Katolik</li>
-            <li>Urbanus Tamelab, S.Pd — Penyuluh Agama Katolik</li>
-            <li>Yohanes Jandu, S.Ag — Penyuluh Agama Katolik</li>
-            <li>Ni Made Ayu Reni, S.Pd — Penyuluh Agama Hindu</li>
-        </ul>
+      <h2>Struktur Organisasi</h2>
+      <ul>
+        <li>Muhammad Idrus, S.Ag., M.Ag — Kepala KUA / Penghulu</li>
+        <li>Umi Hasanah, S.Pd.I — Tata Usaha</li>
+        <li>Ibnu Hajar — Administrasi</li>
+        <li>Alikhasbuna, S.Pd — Penyuluh Agama Islam</li>
+        <li>A. Nurfadilah Berlian Fahmi, S.Pd — Penyuluh Agama Islam</li>
+        <li>Muh. Nurkhalid, S.Ag — Penyuluh Agama Islam</li>
+        <li>Muh. Raenaldi, S.Sos — Penyuluh Agama Islam</li>
+        <li>Marsiana Gembira Beke, S.Ag — Penyuluh Agama Katolik</li>
+        <li>Urbanus Tamelab, S.Pd — Penyuluh Agama Katolik</li>
+        <li>Yohanes Jandu, S.Ag — Penyuluh Agama Katolik</li>
+        <li>Ni Made Ayu Reni, S.Pd — Penyuluh Agama Hindu</li>
+      </ul>
     </section>
 
     <section id="kontak">
-        <h2>Kontak</h2>
-        <p><strong>Alamat:</strong> Kompleks Yayasan Al Hikmah, Desa Karave, Kecamatan Bulu Taba, Kabupaten Pasangkayu</p>
-        <p><strong>Telepon/HP:</strong> 082335301808</p>
-        <p><strong>Email:</strong> aldels12571@gmail.com</p>
+      <h2>Kontak</h2>
+      <p><strong>Alamat:</strong> Kompleks Yayasan Al Hikmah, Desa Karave, Kecamatan Bulu Taba, Kabupaten Pasangkayu</p>
+      <p><strong>Telp/HP:</strong> 0823‑3530‑1808</p>
+      <p><strong>Email:</strong> aldels12571@gmail.com</p>
+      <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1994.2330548389416!2d119.40652240654532!3d-1.4917481749128616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sid!2sid!4v1751462043414!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </section>
 
     <section id="galeri">
-        <h2>Galeri Kantor</h2>
-        <div class="galeri-grid">
-            <img src="foto bersama toleransi.jpg" alt="Foto bersama toleransi">
-            <img src="apel pagi.jpg" alt="Apel pagi">
-            <img src="kegiatan pelayanan.jpg" alt="Pelayanan urusan pernikahan">
-            <img src="kegiatan pembacaan barzanji.jpg" alt="Kegiatan pembacaan barzanji">
-        </div>
+      <h2>Galeri Kantor</h2>
+      <div class="galeri-grid">
+        <img src="foto%20bersama%20toleransi.jpg" alt="Foto bersama toleransi" loading="lazy">
+        <img src="apel%20pagi.jpg" alt="Apel pagi" loading="lazy">
+        <img src="kegiatan%20pelayanan.jpg" alt="Pelayanan urusan pernikahan" loading="lazy">
+        <img src="kegiatan%20pembacaan%20barzanji.jpg" alt="Pembacaan Barzanji" loading="lazy">
+      </div>
     </section>
 
     <section id="form-pelayanan">
-        <h2>Formulir Pelayanan</h2>
-        <p>Silakan isi formulir berikut untuk mengajukan keperluan Anda:</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSekV59i49X65ZLRLey9sBKY35ISkUKvoq5NSXKdtMtbIBhNmw/viewform?usp=header" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Memuat…</iframe>
+      <h2>Formulir Pelayanan</h2>
+      <p>Silakan klik tautan di bawah ini untuk mengajukan keperluan Anda:</p>
+      <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSekV59i49X65ZLRLey9sBKY35ISkUKvoq5NSXKdtMtbIBhNmw/viewform" target="_blank" class="button-link">Buka Formulir Pelayanan</a></p>
     </section>
+  </main>
 
-    <footer style="text-align:center; padding:20px; background:#003366; color:white;">
-        &copy; 2025 KUA Kecamatan Bulu Taba | Dibuat oleh Muh Raenaldi
-    </footer>
+  <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-label="Tampilan gambar diperbesar">
+    <img src="" alt="Gambar Diperbesar">
+  </div>
 
+  <button class="toggle-switch" id="darkToggle" aria-label="Alihkan tema gelap/terang">🌙</button>
+
+  <footer>
+    © 2025 KUA Kecamatan Bulu Taba | Dibuat oleh Muh Raenaldi
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
